# trnkatomas.github.io

./: README.md  _quarto.yml  about.qmd  index.qmd  requirements.txt
.github/workflows/: publish.yml
posts/birds_flashcards/: _audio_links.md  index.html  index.qmd  index_lipka.html  manifest.json
posts/birds_flashcards/qr_processor/: main.py  pipeline.py  pyproject.toml
posts/databaze_knih_overlapps/: analysis.ipynb  book_overlap_graph.json  compute_overalps.py  db_knih_user_parser.py  graph_edges_overlaps.html  last_claude_session.txt  reviews_changed.py
posts/post-with-code/: index.qmd
posts/welcome/: index.qmd
