[project]
name = "qr-processor"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "opencv-contrib-python>=4.13.0.92",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pyzbar>=0.1.9",
    "requests>=2.33.1",
]
